--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
     id 'org.springframework.boot' version '2.2.5.RELEASE'
     id 'io.zensoft.versioning' version '1.1.0' // This plugin made by me and my previous team :)
+    id 'com.palantir.docker-compose' version '0.25.0'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -92,6 +93,7 @@ compileTestKotlin {
 
 // Tests
 test {
+    dependsOn dockerComposeUp
     useJUnitPlatform()
 
     if (project.hasProperty('maxParallelForks')) {
@@ -100,7 +102,13 @@ test {
     if (project.hasProperty('forkEvery')) {
         forkEvery = project.forkEvery as int
     }
+    finalizedBy dockerComposeDown
 }
+
+dockerComposeUp {
+    dependsOn generateDockerCompose
+}
+
 jacoco {
     toolVersion = "0.8.5"
 }
@@ -131,4 +139,9 @@ idea {
         sourceDirs += kaptMain
         generatedSourceDirs += kaptMain
     }
+}
+
+dockerCompose {
+    template 'docker-compose.yml'
+    dockerComposeFile "${project.buildDir}${File.separator}/docker-compose.yml"
 }
